// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render <Tab /> <Tab /> should render 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item"
    href="#"
  >
    <span>
      Sochi
    </span>
  </a>
</li>
`;

exports[`Render <Tab /> Active <Tab /> should render 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__itemtabs__item tabs__item--active"
    href="#"
  >
    <span>
      Sochi
    </span>
  </a>
</li>
`;
